2010-08-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * win32-config.h, geany.nsi, configure.ac, doc/geany.txt,
   doc/geany.html, wscript, geany_private.rc:
   Version bump.


2010-08-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Fix a memory leak based on input by Daniel Marjamäki. Thanks.


2010-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Revert r4840 scope completion mode as it sometimes breaks
   autocompletion.


2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c, src/ui_utils.h:
   Make ui_label_new_bold() a function.
   Escape the name of the current document for markup when using
   document name for menu items (closes #3038844).


2010-07-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c:
   On Windows, convert filetype extensions read from config files
   to lower case (closes #3028856).


2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Focus toolbar item when pressing Go to Line keybinding only when
   it's not in the toolbar's drop down overflow menu (fixes #3027454).


2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix build menu translation problems.


2010-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix scrolling the editor line in view after loading a session and
   switching document tabs. Note this causes repainting so needs
   improvement.


2010-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/project.c, src/project.h:
   Show the Project Properties build tab when choosing 'Set Build
   Commands' for now to prevent confusion with non-project commands.


2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Fix Grep --exclude-dir example.

